# ConsolChess

./: CMakeLists.txt  README.md  chess.cpp  functions.html  main.cpp  part_1.cpp  part_2.cpp  test_1.cpp  test_2.cpp  tests.cpp
